[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlane = "5.2.2"
hyperlane-utils = "0.1.1"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
