[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
core_affinity = "0.8.3"
hyperlane = "5.0.4"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
