[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyperlane = "5.12.2"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[dependencies.tokio]
version = "1.45.1"
features = ["rt", "macros", "time", "sync"]
